# hana

./: .appveyor.yml  .drone.star  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  RELEASE_NOTES.md  TUTORIAL.md  _2orderable_8cpp-example.html  accessors_8hpp.html  adapt__adt_8hpp.html  adapt__struct_8hpp.html  add__rvalue__reference_8hpp.html  adjust_8hpp.html  adjust__if_8hpp.html  adjust__mcd_8hpp.html  adjust__mcd_8hpp_source.html  adl_8hpp.html  algorithm_8hpp.html  algorithm_8hpp_source.html  all_8hpp.html  all__of_8hpp.html  always_8hpp.html  and_8hpp.html  annotated.html  annotated.js  any_8hpp.html  any__of_8hpp.html  ap_8hpp.html  append_8hpp.html  applicative_2applicative_8hpp.html  applicative_2applicative_8hpp_source.html  applicative_2laws_8hpp.html  applicative_2laws_8hpp_source.html  applicative_2list__mcd_8hpp.html  applicative_2mcd_8hpp.html  (+2463 more)
benchmark/: CMakeLists.txt  benchmark.at.compile.erb.json  benchmark.at.erb.json  benchmark.at.execute.erb.json  benchmark.count_if.compile.erb.json  benchmark.count_if.erb.json  benchmark.count_if.execute.erb.json  benchmark.fold_left.compile.erb.json  benchmark.fold_left.erb.json  benchmark.fold_left.execute.erb.json  benchmark.fold_right.compile.erb.json  benchmark.fold_right.erb.json  benchmark.fold_right.execute.erb.json  benchmark.in.rb  benchmark.including.erb.json  benchmark.product.compile.erb.json  benchmark.product.erb.json  benchmark.product.execute.erb.json  benchmark.transform.compile.erb.json  benchmark.transform.erb.json  benchmark.transform.execute.erb.json  chart.html  chart.js  measure.hpp  measure.in.rb  plot.rb  todo.fmap.mpl_vector.cpp
benchmark/at/: bloat.erb.json  compile.erb.json  compile.fusion.list.erb.cpp  compile.fusion.vector.erb.cpp  compile.fusion.vector.heterogeneous.erb.cpp  compile.fusion.vector.homogeneous.erb.cpp  compile.hana.tuple.erb.cpp  compile.hana.tuple.homogeneous.erb.cpp  compile.meta.list.erb.cpp  compile.mpl.vector.erb.cpp  compile.mpl11.list.erb.cpp  compile.std.tuple.erb.cpp  execute.erb.json  execute.fusion.list.erb.cpp  execute.fusion.vector.erb.cpp  execute.hana.tuple.erb.cpp  execute.std.tuple.erb.cpp
benchmark/at_key/: compile.erb.json  compile.fusion.map.erb.cpp  compile.hana.map.erb.cpp  compile.hana.tuple.erb.cpp  compile.mpl.map.erb.cpp
benchmark/at_key.lookup/: compile.erb.json  compile.hana.map.erb.cpp  compile.hana.set.erb.cpp  compile.hana.tuple.erb.cpp
benchmark/cartesian_product/: compile.erb.json  compile.hana.tuple.erb.cpp
benchmark/core/: CMakeLists.txt
benchmark/count_if/: bloat.erb.json  compile.erb.json  compile.fusion.list.erb.cpp  compile.fusion.vector.erb.cpp  compile.fusion.vector.heterogeneous.erb.cpp  compile.fusion.vector.homogeneous.erb.cpp  compile.hana.tuple.erb.cpp  compile.hana.tuple.homogeneous.erb.cpp  compile.meta.list.erb.cpp  compile.mpl.vector.erb.cpp  execute.erb.json  execute.fusion.vector.erb.cpp  execute.hana.tuple.erb.cpp
benchmark/detail/: CMakeLists.txt
benchmark/difference/: compile.hana.set.erb.cpp
benchmark/filter/: compile.erb.json  compile.fusion.list.erb.cpp  compile.fusion.vector.erb.cpp  compile.hana.tuple.erb.cpp  compile.meta.list.erb.cpp  compile.mpl.vector.erb.cpp  compile.mpl11.list.erb.cpp
benchmark/find_if/: compile.erb.json  compile.fusion.list.erb.cpp  compile.fusion.vector.erb.cpp  compile.fusion.vector.heterogeneous.erb.cpp  compile.hana.map.erb.cpp  compile.hana.set.erb.cpp  compile.hana.tuple.erb.cpp  compile.hana.tuple.heterogeneous.erb.cpp  compile.meta.list.erb.cpp  compile.mpl.vector.erb.cpp  compile.std.integer_sequence.erb.cpp
benchmark/fold_left/: bloat.erb.json  compile.cexpr.recursive.erb.cpp  compile.cexpr.unrolled.erb.cpp  compile.erb.json  compile.fusion.list.erb.cpp  compile.fusion.vector.erb.cpp  compile.fusion.vector.heterogeneous.erb.cpp  compile.fusion.vector.homogeneous.erb.cpp  compile.hana.basic_tuple.erb.cpp  compile.hana.tuple.erb.cpp  compile.hana.tuple.heterogeneous.erb.cpp  compile.hana.tuple.homogeneous.erb.cpp  compile.hana.tuple_t.erb.cpp  compile.hana.tuple_t.metafunction.erb.cpp  compile.meta.list.erb.cpp  compile.mpl.vector.erb.cpp  compile.mpl11.list.erb.cpp  execute.erb.json  execute.fusion.list.erb.cpp  execute.fusion.vector.erb.cpp  execute.hana.tuple.erb.cpp  execute.std.array.erb.cpp  execute.std.vector.erb.cpp
benchmark/fold_right/: bloat.erb.json  compile.erb.json  compile.fusion.vector.erb.cpp  compile.fusion.vector.heterogeneous.erb.cpp  compile.fusion.vector.homogeneous.erb.cpp  compile.hana.basic_tuple.erb.cpp  compile.hana.tuple.erb.cpp  compile.hana.tuple.homogeneous.erb.cpp  compile.hana.tuple_t.erb.cpp  compile.meta.list.erb.cpp  (+6 more)
example/: CMakeLists.txt  accessors.cpp  adapt_adt.cpp  adapt_struct.cpp  adjust.cpp  adjust_if.cpp  all.cpp  all_of.cpp  and.cpp  any.cpp  any_of.cpp  ap.cpp  append.cpp  applicative.cpp  at.cpp  at_c.cpp  at_key.cpp  back.cpp  cartesian_product.cpp  chain.cpp  comonad.cpp  comparable.cpp  comparing.cpp  concat.cpp  constant.cpp  contains.cpp  count.cpp  count_if.cpp  cycle.cpp  define_struct.cpp  difference.cpp  div.cpp  drop_back.cpp  drop_front.cpp  drop_front_exactly.cpp  drop_while.cpp  duplicate.cpp  either.applicative.cpp  either.cpp  empty.cpp  (+168 more)
experimental/: CMakeLists.txt  fold_expression.cpp  function.cpp  infinite_set.cpp  lambda_tuple.cpp  lazy_list.cpp  list_of.cpp  ref_tuple.cpp  std_tuple.cpp  strong_datatypes.cpp  type_operators.cpp
test/: CMakeLists.txt  Jamfile.v2  assert.cpp  bool.cpp  builtin_array.cpp  cnumeric.cpp  comparable.cpp  comparable_default.cpp  either.cpp  enumerable.cpp  euclidean_ring.cpp  foldable.cpp  for_each.cpp  foreign.cpp  functional.cpp  group.cpp  hana.cpp  hash.cpp  if.cpp  index_if.cpp  integer_list.cpp  integral.cpp  integral_constant.constexpr_init.cpp  integral_constant.cpp  integral_domain.cpp  iterable.cpp  lazy.cpp  list.cpp  logical.cpp  map.cpp  maybe.cpp  metafunction.cpp  minimal_product.cpp  minimal_record.cpp  monoid.cpp  optional.cpp  orderable.cpp  pair.cpp  range.cpp  record.fold_move_only.cpp  (+20 more)
(+4332 files in other folders)
